# fight_for_work

./: README.md
C++_primer/: test  test.cpp
C++_primer/1/: test
C++_primer/10/: 10  10.cpp  10_2  10_2.cpp  10_3  10_3.cpp  test  test.cpp
C++_primer/11/: 1.txt  11_1  11_1.cpp  11_2  11_2.cpp  11_3  11_3.cpp  test  test.cpp
C++_primer/12/: 12_1  12_1.cpp  12_2  12_2.cpp  12_3.cpp  12_3.h  12_3_main  12_3_main.cpp  ex12_20.txt  test  test.cpp
C++_primer/13/: 13_1  13_1.cpp  13_2  13_2.cpp  13_3  13_3.cpp  13_4  13_4.cpp  13_5  13_5.cpp  13_6  13_6.cpp  ex13_5.h  ex_13_44  ex_13_44.cpp  test  test.cpp
C++_primer/14/: 14_3.cpp
C++_primer/15/: 15_6  15_6.cpp
C++_primer/17/: 17_1.cpp  17_2.cpp  17_3  17_3.cpp  17_4  17_4.cpp  17_5  17_5.cpp  countfile  countfile.cpp
C++_primer/18/: 18_2  18_2.cpp  18_3  18_3.cpp  18_4  (+1 more)
IEEE_coding/: Another_Sliding_Window_Problem.cpp  Balls.cpp  Bounded_tuples.cpp  Brick_stacks.cpp  Cheap_Construction.cpp  Corporation.cpp  Digitt_swap.cpp  Disparate_Data_Sets.cpp  Halving.cpp  IEEE754_Emulator.cpp  Icarus.cpp  Increasing_decreasing_permutations.cpp  Increasing_table.cpp  Invertible_Pairs.cpp  Kings_Order.cpp  Laser_defense.cpp  Power_of_three.cpp  Queries.cpp  Rectangles_and_arrays.cpp  Sierpinski.cpp  Start_Board.cpp  Stick.cpp  Stones.cpp  Triumvirates.cpp  not_an_optimization_problem.cpp  tempCodeRunnerFile.cpp
propject/: CMakeLists.txt  main.cpp
shuai/: CMakeLists.txt
shuai/Array/: 2.Remove_Element.cpp  4.Subarray_with_smallest_length.cpp  5.Spiral matrix.cpp
shuai/Linked_list/: 1.Remove_Linked_List_Elements  .cpp
(+361 files in other folders)
