cmake_minimum_required(VERSION 3.25)
project(shuai)

set(CMAKE_CXX_STANDARD 17)

add_executable(shuai "Array/1.Binary_search .cpp" Array/2.Remove_Element.cpp Array/3.Square_Array.cpp Array/4.Subarray_with_smallest_length.cpp "Array/5.Spiral matrix.cpp" "Linked_list/1.Remove_Linked_List_Elements  .cpp" "Linked_list/1.Remove_Linked_List_Elements  .cpp")
